trunk/Archive2/2c/558f91f2f92359/output
main.cpp:7:26: error: 'B::foo' hides overloaded virtual function [-Werror,-Woverloaded-virtual]
    public: virtual void foo() {  }
                         ^
main.cpp:3:26: note: hidden overloaded virtual function 'A::foo' declared here: different qualifiers (const vs none)
    public: virtual void foo() const {  }
                         ^
1 error generated.
